First productionish build done

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<!--
-  **NOTE:** This is a template for index.html. It uses ejs and htmlWebpackPlugin to generate a different index.html for each environment. htmlWebpackPlugin will dynamically add references to the scripts and styles that it bundles to this file. The generated bundles have hash-based filenames, so it's necessary to add the references dynamically.
-  For more info on ejs, see http://www.embeddedjs.com/. For examples of using it with htmlWebpackPlugin, see https://github.com/jaketrent/html-webpack-template/blob/master/index.ejs
-  -->
 <head>
   <!-- Tachyons for all! -->
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
-  <!--
-    The htmlWebpackPlugin will parse the logic below so that trackJS is only added to the production version of index.html (since only webpack.config.prod.js provides the trackJS token)
-    This is an example of how to add features to index.html for only one environment.
-    To track JavaScript errors via TrackJS, sign up for a free trial at TrackJS.com and enter your token in /webpack.config.prod.js on line 55.
-   -->
-  <% if (htmlWebpackPlugin.options.trackJSToken) { %>
-  <script>window._trackJs = {token: '<%= htmlWebpackPlugin.options.trackJSToken %>'};</script>
-  <script src="https://d2zah9y47r7bi2.cloudfront.net/releases/current/tracker.js"></script>
-  <% } %>
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8"/>
-  <title>React Slingshot</title>
+  <title>Marcel Hamel</title>
 </head>
 <body>
-<div id="app"></div>
-</body>
+  <nav class="w-100 bg-off-black white-90 flex justify-between items-center f3" style="height: 50px;">
+    <div class="ph3">
+      <a href="/" class="white-90"><p>MH</p></a>
+    </div>
+    <div id="nav-icons" class="ph3">
+      <a href="/music" class="white-90"><i class="fas fa-music pl3"></i></a>
+      <i class="fas fa-code pl3"></i>
+      <a href="/sideman" class="white-90"><i class="fab fa-spotify pl3"></i></a>
+    </div>
+  </nav>
+    <div id="app" style="height: calc(100vh - 160px);"></div>
+    <footer class="w-100 bg-off-black white-90 flex flex-column justify-center items-center f3 pa3" style="height: 110px;">
+      <div class="ph3 pt2 tc">
+        <p class="f6 mv1">&copy; <%= new Date().getFullYear() %> Marcel Hamel. All rights reserved.</p>
+      </div>
+      <div class="f6 flex items-center pl2 pt3">
+        Based in Queens. Product of <img src="/images/maine.svg" height="30">
+      </div>
+    </footer>
+  </body>
 </html>
